Revert "Afegit el draggable del todo. Tots els vcomponent-item dintre de container. Bug amb els overflows"
This reverts commit d4c0664c8a19385cc58aa0c5c7df9795c542be06.

--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ html, body {
   padding: 0;
   color: white;
   background: #0ac2d2;
-  overflow: hidden; }
+  overflow: scroll; }
 
 .container-fluid {
  /*margin-top: 70px;*/
