--- a/css/pages.css
+++ b/css/pages.css
@@ -15,8 +15,8 @@
     height: 100%;
     top: 0;
     left: 0;
-    visibility: hidden;*/
-    overflow-y: auto;
+    visibility: hidden;
+    overflow: hidden;*/
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
